default/objects/LongForm__c/LongForm__c.object-meta.xml
<CustomObject>
    <label>LongForm</label>
    <nameField>
        <label>LongForm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LongForms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>