default/objects/LongForm__c/fields/Test_Locator__c.field-meta.xml
<CustomField>
    <fullName>Test_Locator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Locator</label>
    <type>Checkbox</type>
</CustomField>