default/objects/LongForm__c/fields/Test_Payment__c.field-meta.xml
<CustomField>
    <fullName>Test_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Payment</label>
    <type>Checkbox</type>
</CustomField>